--- a/index.html
+++ b/index.html
@@ -122,9 +122,9 @@ body{
 <img src="https://i.pinimg.com/736x/d1/b2/09/d1b209ce0dbda08cd0bf26a2bcd8ea2c.jpg">
 
 <div class="galeria">
-<img src="imagenes/foto1.jpeg">
-<img src="imagenes/foto2.jpeg">
-<img src="imagenes/foto3.jpeg">
+<img src="imagen/foto1.jpeg">
+<img src="imagen/foto2.jpeg">
+<img src="imagen/foto3.jpeg">
 </div>
 </div>
 
@@ -133,9 +133,9 @@ body{
 <img src="https://github.com/Ronald1234-2/musica/blob/main/mocha5final.gif?raw=true">
 
 <div class="galeria">
-<img src="imagenes/foto4.jpeg">
-<img src="imagenes/foto5.jpeg">
-<img src="imagenes/foto6.jpeg">
+<img src="imagen/foto4.jpeg">
+<img src="imagen/foto5.jpeg">
+<img src="imagen/foto6.jpeg">
 </div>
 </div>
 
@@ -144,9 +144,9 @@ body{
 <img src="https://github.com/Ronald1234-2/musica/blob/main/mocha6final.gif?raw=true">
 
 <div class="galeria">
-<img src="imagenes/foto7.jpeg">
-<img src="imagenes/foto8.jpeg">
-<img src="imagenes/foto9.jpeg">
+<img src="imagen/foto7.jpeg">
+<img src="imagen/foto8.jpeg">
+<img src="imagen/foto9.jpeg">
 </div>
 </div>
 
@@ -155,9 +155,9 @@ body{
 <img src="https://github.com/Ronald1234-2/musica/blob/main/mocha7final.gif?raw=true">
 
 <div class="galeria">
-<img src="imagenes/foto10.jpeg">
-<img src="imagenes/foto11.jpeg">
-<img src="imagenes/foto12.jpeg">
+<img src="imagen/foto10.jpeg">
+<img src="imagen/foto11.jpeg">
+<img src="imagen/foto12.jpeg">
 </div>
 </div>
 
@@ -166,11 +166,11 @@ body{
 <img src="https://github.com/Ronald1234-2/musica/blob/main/mocha9final.gif?raw=true">
 
 <div class="galeria">
-<img src="imagenes/foto13.jpeg">
-<img src="imagenes/foto14.jpeg">
-<img src="imagenes/foto15.jpeg">
-<img src="imagenes/foto16.jpeg">
-<img src="imagenes/foto17.jpeg">
+<img src="imagen/foto13.jpeg">
+<img src="imagen/foto14.jpeg">
+<img src="imagen/foto15.jpeg">
+<img src="imagen/foto16.jpeg">
+<img src="imagen/foto17.jpeg">
 </div>
 </div>
 
