--- a/index.html
+++ b/index.html
@@ -122,9 +122,9 @@ body{
 <img src="https://i.pinimg.com/736x/d1/b2/09/d1b209ce0dbda08cd0bf26a2bcd8ea2c.jpg">
 
 <div class="galeria">
-<img src="imagen/foto1.jpeg">
-<img src="imagen/foto2.jpeg">
-<img src="imagen/foto3.jpeg">
+<img src="imagene/foto1.jpeg">
+<img src="imagene/foto2.jpeg">
+<img src="imagene/foto3.jpeg">
 </div>
 </div>
 
