--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@ body{
 <img src="https://i.pinimg.com/736x/d1/b2/09/d1b209ce0dbda08cd0bf26a2bcd8ea2c.jpg">
 
 <div class="galeria">
-<img src="imagene/foto1.jpeg">
+<img src="https://github.com/jesugero79-droid/jesugero79.github.io/blob/principal/imagen/foto1.jpeg?raw=true">
 <img src="imagene/foto2.jpeg">
 <img src="imagene/foto3.jpeg">
 </div>
