--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@ body{
 <img src="https://github.com/Ronald1234-2/musica/blob/main/mocha5final.gif?raw=true">
 
 <div class="galeria">
-<img src="imagen/foto4.jpeg">
+<img src="https://github.com/jesugero79-droid/jesugero79.github.io/blob/principal/imagen/foto4.jpeg?raw=true">
 <img src="imagen/foto5.jpeg">
 <img src="imagen/foto6.jpeg">
 </div>
@@ -144,7 +144,7 @@ body{
 <img src="https://github.com/Ronald1234-2/musica/blob/main/mocha6final.gif?raw=true">
 
 <div class="galeria">
-<img src="imagen/foto7.jpeg">
+<img src="https://github.com/jesugero79-droid/jesugero79.github.io/blob/principal/imagen/foto7.jpeg?raw=true">
 <img src="imagen/foto8.jpeg">
 <img src="imagen/foto9.jpeg">
 </div>
@@ -155,7 +155,7 @@ body{
 <img src="https://github.com/Ronald1234-2/musica/blob/main/mocha7final.gif?raw=true">
 
 <div class="galeria">
-<img src="imagen/foto10.jpeg">
+<img src="https://github.com/jesugero79-droid/jesugero79.github.io/blob/principal/imagen/foto10.jpeg?raw=true">
 <img src="imagen/foto11.jpeg">
 <img src="imagen/foto12.jpeg">
 </div>
@@ -166,7 +166,7 @@ body{
 <img src="https://github.com/Ronald1234-2/musica/blob/main/mocha9final.gif?raw=true">
 
 <div class="galeria">
-<img src="imagen/foto13.jpeg">
+<img src="https://github.com/jesugero79-droid/jesugero79.github.io/blob/principal/imagen/foto13.jpeg?raw=true">
 <img src="imagen/foto14.jpeg">
 <img src="imagen/foto15.jpeg">
 <img src="imagen/foto16.jpeg">
