--- a/index.html
+++ b/index.html
@@ -21,47 +21,47 @@
         <div id="gifContainer">
             <img src="https://i.pinimg.com/736x/d1/b2/09/d1b209ce0dbda08cd0bf26a2bcd8ea2c.jpg">
             <div class="galeria">
-                <img src="imagene/foto1.jpeg">
-                <img src="imagene/foto2.jpeg">
-                <img src="imagene/foto3.jpeg">
+                <img src="https://github.com/jesugero79-droid/jesugero79.github.io/blob/main/imagene/foto1.jpeg?raw=true">
+                <img src="https://github.com/jesugero79-droid/jesugero79.github.io/blob/main/imagene/foto2.jpeg?raw=true">
+                <img src="https://github.com/jesugero79-droid/jesugero79.github.io/blob/main/imagene/foto3.jpeg?raw=true">
             </div>
         </div>
 
         <div id="happyGifContainer" style="display: none;">
             <img src="https://github.com/Ronald1234-2/musica/blob/main/mocha5final.gif?raw=true">
             <div class="galeria">
-                <img src="imagene/foto4.jpeg">
-                <img src="imagene/foto5.jpeg">
-                <img src="imagene/foto6.jpeg">
+                <img src="https://github.com/jesugero79-droid/jesugero79.github.io/blob/main/imagene/foto4.jpeg?raw=true">
+                <img src="https://github.com/jesugero79-droid/jesugero79.github.io/blob/main/imagene/foto5.jpeg?raw=true">
+                <img src="https://github.com/jesugero79-droid/jesugero79.github.io/blob/main/imagene/foto6.jpeg?raw=true">
             </div>
         </div>
 
         <div id="happyGifContainer2" style="display: none;">
             <img src="https://github.com/Ronald1234-2/musica/blob/main/mocha6final.gif?raw=true">
             <div class="galeria">
-                <img src="imagene/foto7.jpeg">
-                <img src="imagene/foto8.jpeg">
-                <img src="imagene/foto9.jpeg">
+                <img src="https://github.com/jesugero79-droid/jesugero79.github.io/blob/main/imagene/foto7.jpeg?raw=true">
+                <img src="https://github.com/jesugero79-droid/jesugero79.github.io/blob/main/imagene/foto8.jpeg?raw=true">
+                <img src="https://github.com/jesugero79-droid/jesugero79.github.io/blob/main/imagene/foto9.jpeg?raw=true">
             </div>
         </div>
 
         <div id="happyGifContainer3" style="display: none;">
             <img src="https://github.com/Ronald1234-2/musica/blob/main/mocha7final.gif?raw=true">
             <div class="galeria">
-                <img src="imagene/foto10.jpeg">
-                <img src="imagene/foto11.jpeg">
-                <img src="imagene/foto12.jpeg">
+                <img src="https://github.com/jesugero79-droid/jesugero79.github.io/blob/main/imagene/foto10.jpeg?raw=true">
+                <img src="https://github.com/jesugero79-droid/jesugero79.github.io/blob/main/imagene/foto11.jpeg?raw=true">
+                <img src="https://github.com/jesugero79-droid/jesugero79.github.io/blob/main/imagene/foto12.jpeg?raw=true">
             </div>
         </div>
 
         <div id="happyGifContainer4" style="display: none;">
             <img src="https://github.com/Ronald1234-2/musica/blob/main/mocha9final.gif?raw=true">
             <div class="galeria">
-                <img src="imagene/foto13.jpeg">
-                <img src="imagene/foto14.jpeg">
-                <img src="imagene/foto15.jpeg">
-                <img src="imagene/foto16.jpeg">
-                <img src="imagene/foto17.jpeg">
+                <img src="https://github.com/jesugero79-droid/jesugero79.github.io/blob/main/imagene/foto13.jpeg?raw=true">
+                <img src="https://github.com/jesugero79-droid/jesugero79.github.io/blob/main/imagene/foto14.jpeg?raw=true">
+                <img src="https://github.com/jesugero79-droid/jesugero79.github.io/blob/main/imagene/foto15.jpeg?raw=true">
+                <img src="https://github.com/jesugero79-droid/jesugero79.github.io/blob/main/imagene/foto16.jpeg?raw=true">
+                <img src="https://github.com/jesugero79-droid/jesugero79.github.io/blob/main/imagene/foto17.jpeg?raw=true">
             </div>
         </div>
 
